# gameplay_summary

./: .gitignore  fetch_benchmarks_from_opendota.py  groq_connector.py  investigate_replay_data.ipynb  parser.py  prompt_generator.py  pyproject.toml  requirements.in  requirements.txt  split_intervals.py
data/: benchmarks.json
src/gameplay_summary/: __main__.py  entities.py  settings.py
src/gameplay_summary/api/: groq_api.py  parser_api.py
src/gameplay_summary/cloud/: gcs_client.py
src/gameplay_summary/db/: sqllite_client.py
src/gameplay_summary/services/: dataset_creator.py
src/gameplay_summary/services/data_extractor/: data_extractor.py  post_processing.py
src/gameplay_summary/services/prompt_generator/: prompt_generator.py  templates.py
